<?xml version="1.0" encoding="utf-8"?>
<resources>

 
    <string name="app_name">税务查询</string>
    <!-- BUTTON values -->
    <string name="back">返回</string>
    <string name="query">查询</string>
    <!-- Capture -->
    <string name="capture_tips">将二维码放置于镜头红线内进行扫描。</string>    
    <!-- TEXT  values -->
    <string name="header_title">QR Code</string>
    <string name="title_scan">扫描查验</string>
    <string name="title_input">输入查验</string>
    <string name="title_lucky">中奖查验</string>
    <string name="title_sms">短信查验</string>
    <string name="title_query">实时查验</string>
    <string name="title_sms_send">短信发送</string>
    <string name="title_phoneinput">手机号码查验</string>
    <string name="title_help">帮助</string>
    <string name="title_showresult">显示结果</string>
    <!-- share preferneces -->
    <string name="preferences_actions_title">找到条码时</string>
    <string name="preferences_bulk_mode_summary">连续扫描并保存多个条形码</string>
    <string name="preferences_bulk_mode_title">批量扫描模式</string>
    <string name="preferences_copy_to_clipboard_title">复制到剪切板</string>
    <string name="preferences_custom_product_search_title">自定义搜索网址</string>
    <string name="preferences_decode_1D_title">扫描 一维条码</string>
    <string name="preferences_decode_Data_Matrix_title">扫描 DM码</string>
    <string name="preferences_decode_QR_title">扫描 QR码</string>
    <string name="preferences_front_light_summary">前灯可用时，打开前灯</string>
    <string name="preferences_front_light_title">前灯</string>
    <string name="preferences_general_title">一般设置</string>
    <string name="preferences_name">设置</string>
    <string name="preferences_play_beep_title">提示音</string>
    <string name="preferences_remember_duplicates_summary">在历史记录中保存重复记录</string>
    <string name="preferences_remember_duplicates_title">记住重复</string>
    <string name="preferences_result_title">结果设置</string>
    <string name="preferences_reverse_image_summary">设备上启用了前置摄像头只</string>
    <string name="preferences_reverse_image_title">反转摄像机的图像</string>
    <string name="preferences_scanning_title">条码类型选择</string>
    <string name="preferences_supplemental_summary">尝试检索关于条码内容的更多信息</string>
    <string name="preferences_supplemental_title">检索更多信息</string>
    <string name="preferences_vibrate_title">振动</string>
    <string formatted="false" name="preferences_custom_product_search_summary">Use %s as a placeholder for the product ID, and %f for format</string>
    <!-- TAB HOST -->
    <string name="main_scan">扫描查询</string>
    <string name="main_input">输入查询</string>
    <string name="main_lucky">中奖查询</string>
    <string name="main_sms">短信查询</string>
    <string name="main_help">帮助</string>

    <!-- PHONE INPUT -->
    <string name="phonetext">手机号码</string>
    <string name="phoneserbtn">查询</string>

    <!-- HelpActivity layout values -->
    <string name="help_user">使用说明</string>
    <string name="help_lucky">发票中奖说明</string>
    <string name="help_other">其他</string>

    <!-- SMS layout values -->
    <!-- SMSInputActivity values -->
    <string name="sms_input_no">发票号码</string>
    <!-- SMSSendActivity values -->
    <string name="sms_sendto">收件人:</string>
    <string name="sms_send_address">123662</string>
    <!-- SMS layout button values -->
    <string name="sms_send">发送</string>
    <string name="sms_edittext_hint">input here</string>
    
        
   <!-- handmadeinput.xml -->
	<string name="invoicecode">发票代码</string>
	<string name="invoicenum">发票号码</string>
	<string name="money">金额</string>
	<string name="seabtntext">查询</string>
	<!-- xxxxxxx -->
	<string name="Invoiceid">发票代码</string>
    <string name="Invoicenumber">发票号码</string>
    <string name="payname">收款方名称</string>
    <string name="paycertificalnumber">收款方证件</string>
    <string name="ordername">付款方名称</string>
    <string name="ordercertificalnumber">付款方证件</string>
    <string name="Invoicedate">开票日期</string>
    <string name="Invoiceamount">金额</string>
    <string name="checktime">查验的次数</string>
    <string name="fiscalnumber">税控码</string>
    <string name="checknumber">查询码</string>
    <string name="passwordversion">密码版本号</string>
    <string name="thephonenumberlogined">登记的手机号码</string>
    <string name="prizelevel">中奖等级</string>
    <string name="prizeaccount">中奖金额</string>
    <string name="prizepriods">中奖期数</string>
    <string name="checkinresult">登记结果</string>
    <string name="faildes">失败描述</string>
    <string name="Invoiceamount_2">发票金额</string>
	 <!-- xxxxxxxx -->   
	<!-- winnum.xml -->
	<string name="winseachoice">中奖查询方式选择</string>
	<string name="qrcodesea">二维码查询</string>
	<string name="phonenumsea">手机号码查询</string>
	<string name="input_invoice">输入发票信息查询</string>
	
	    
	<!-- scan.xml -->
	<string name="scan_text">扫描</string>
	
	<!-- scan dialog -->
	<string name="dialog_title">二维码信息:</string>
	<string name="dialog_cancel">重新扫描</string>
</resources>