<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/tb_bg">
<include
    layout="@layout/titlebar" 
    />
    <ImageView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/showresult_image"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >


        <TextView
            android:background="@drawable/tb_buttonbg"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="40px"
            android:text="@string/Invoiceid" 
            />


        <TextView
            android:id="@+id/showrealut_Invoiceid"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="asdfa" 
            android:gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >


        <TextView
            android:background="@drawable/tb_buttonbg"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="40px"
            android:text="@string/Invoicenumber" />

        <TextView
            android:id="@+id/showrealut_Invoicenum"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="asdfa" 
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >


        <TextView
            android:background="@drawable/tb_buttonbg"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="40px"
            android:text="@string/payname" />
        
        <TextView
            android:id="@+id/showrealut_payname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="asdfa" 
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >


        <TextView
            android:background="@drawable/tb_buttonbg"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="40px"
            android:text="@string/paycertificalnumber" />
        
        <TextView
            android:id="@+id/showrealut_paycertificalnumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="asdfa" 
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >


        <TextView
            android:background="@drawable/tb_buttonbg"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="40px"
            android:text="@string/ordername" />
        
        <TextView
            android:id="@+id/showrealut_ordername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="asdfa" 
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >


        <TextView
            android:background="@drawable/tb_buttonbg"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="40px"
            android:text="@string/Invoicedate" />
        
        <TextView
            android:id="@+id/showrealut_Invoicedate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="asdfa" 
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >


        <TextView
            android:background="@drawable/tb_buttonbg"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="40px"
            android:text="@string/Invoiceamount" />
        
        <TextView
            android:id="@+id/showrealut_Invoiceamount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="asdfa" 
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >


        <TextView
            android:background="@drawable/tb_buttonbg"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="40px"
            android:text="@string/checktime" />
        
        <TextView
            android:id="@+id/showrealut_checktime"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="asdfa" 
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >


        <TextView
            android:background="@drawable/tb_buttonbg"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="40px"
            android:text="@string/fiscalnumber" />
        
        <TextView
            android:id="@+id/showrealut_fiscalnumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="asdfa" 
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >


        <TextView
            android:background="@drawable/tb_buttonbg"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="40px"
            android:text="@string/passwordversion" />
        
        <TextView
            android:id="@+id/showrealut_passwordversion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="asdfa" 
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:background="@drawable/tb_buttonbg"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="40px"
            android:text="@string/thephonenumberlogined" />
        
        <TextView
            android:id="@+id/showrealut_thephonenumberlogined"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="asdfa" 
            android:gravity="center"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >


        <TextView
            android:background="@drawable/tb_buttonbg"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="40px"
            android:text="@string/prizelevel" />
        
        <TextView
            android:id="@+id/showrealut_prizelevel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="asdfa" 
            android:gravity="center"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >


        <TextView
            android:background="@drawable/tb_buttonbg"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="40px"
            android:text="@string/prizeaccount" />
        
        <TextView
            android:id="@+id/showrealut_prizeaccount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="asdfa" 
            android:gravity="center"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >


        <TextView
            android:background="@drawable/tb_buttonbg"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="40px"
            android:text="@string/prizepriods" />
        
        <TextView
            android:id="@+id/showrealut_prizepriods"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="asdfa" 
            android:gravity="center"/>

    </LinearLayout>

</LinearLayout>