<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include
        android:id="@+id/titlebarid"
        layout="@layout/titlebar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#FFCCCCCC"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dip" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_launcher" />

        <EditText
            android:id="@+id/sms_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" />

        <Button
            android:id="@+id/sms_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sms_send" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/titlebarid"
        android:background="#FFFFFFFF"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:text="@string/sms_sendto"
            android:textColor="#FFCCCCCC"
            android:textSize="18dip" />

        <TextView
            android:id="@+id/sendToNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:text="@string/sms_send_address"
            android:textColor="#FF000000" />
    </LinearLayout>

</RelativeLayout>