<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
	style="@style/content_background" 
    >
       <include 
        layout="@layout/titlebar"
        />
 		<LinearLayout
	 	    android:orientation="horizontal"
	 	    android:layout_width="match_parent"
	 	    android:layout_height="wrap_content"
	 	    android:layout_weight="1.0"
	 	    android:gravity="center"
	 	    >
 	    <TableLayout 
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
 	        android:layout_marginLeft="5dip"
 	        android:layout_marginRight="5dip"
 	        android:background="@drawable/tableshape"
 	        >
 	       	<TableRow 
 	       	    android:layout_width="fill_parent"
 	       	    android:layout_height="wrap_content"
 	       	    android:gravity="center_vertical"
 	       	    android:layout_margin="1dip"
 	       	    android:background="@drawable/tablerowshape"
 	       	    >
		 	    <TextView 
		 	        android:layout_width="wrap_content"
		 	        android:layout_height="wrap_content"
		 	        android:text="@string/sms_input_no"
		 	        android:gravity="center"
		 	        android:layout_marginLeft="5dip"
		 	        android:textColor="@color/black"
		 	        android:textStyle="bold"
		 	       	/>
		 	    <EditText
		 	        android:id="@+id/sms_input" 
		 	        android:layout_width="fill_parent"
		 	        android:layout_height="wrap_content"
		 	        android:layout_weight="1.0"
		 	        android:layout_margin="5dip"
		 	        android:maxLines="1"
		 	        android:hint="@string/sms_edittext_hint"
		 	        />
 	       	</TableRow>
 	    </TableLayout>
 	</LinearLayout>
 	<LinearLayout 
 	    android:orientation="horizontal"
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:layout_weight="1.0"
 	    android:gravity="center"
 	    >
	 	<Button
	 	    android:id="@+id/send" 
	 	    android:layout_width="wrap_content"
	 	    android:layout_height="wrap_content"
	 	    android:text="@string/sms_send"
	 	    android:textColor="@color/white"
	 	    android:background="@drawable/button_selector"
	 	/>
 	</LinearLayout>
</LinearLayout>