<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <include 
        layout="@layout/titlebar"
        />
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/content_background"
    android:orientation="vertical" >    
<TableLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	 	android:layout_marginLeft="5dip"
	 	android:layout_marginRight="5dip"
	    android:layout_marginTop="60dip"
	    >
	    <TableRow 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:layout_margin="1dip"
	        android:padding="5dip"
	        >
	        <TextView 
	            android:layout_width="110dip"
	            android:layout_height="40dip"
	            android:text="@string/invoicecode"
	            android:textColor="#FFF"
	            android:textStyle="bold"
	            android:gravity="center"
	            android:background="@drawable/tb_textviewbg"
	            />
	        <EditText 
	            android:hint="Input Here"
	        	android:layout_width="160dip"
	        	android:layout_height="40dip" 
	        	android:background="@drawable/tb_editbg"
	        	android:gravity="center_vertical"
	        	android:paddingLeft="5dip"  
	        	android:textColorHint="#FFF" 
	        	android:textColor="#FFF" 
	        />
	    </TableRow>
	    <TableRow 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:layout_margin="1dip"
	        android:padding="5dip"
	        >
	        <TextView 
	            android:layout_width="110dip"
	            android:layout_height="40dip"
	            android:text="@string/invoicenum"
	            android:textColor="#FFF"
	            android:textStyle="bold"
	            android:gravity="center"
	            android:background="@drawable/tb_textviewbg"
	            />
	        <EditText 
	            android:hint="Input Here"
	        	android:layout_width="160dip"
	        	android:layout_height="40dip"
	        	android:background="@drawable/tb_editbg"  
	        	android:gravity="center_vertical" 
	        	android:paddingLeft="5dip"  
	        	android:textColorHint="#FFF" 
	        	android:textColor="#FFF"    
	        />
	    </TableRow>
	    <TableRow 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:layout_margin="1dip"
	        android:padding="5dip"
	        >
	        <TextView 
	            android:layout_width="110dip"
	            android:layout_height="40dip"
	            android:background="@drawable/tb_textviewbg"
	            android:text="@string/money"
	            android:textColor="#FFF"
	            android:gravity="center"
	            />
	        <EditText 
	            android:hint="Input Here"
	        	android:layout_width="160dip"
	        	android:layout_height="40dip" 
	        	android:background="@drawable/tb_editbg"
	        	android:gravity="center_vertical"   
	        	android:paddingLeft="5dip"  
	        	android:textColorHint="#FFF" 
	        	android:textColor="#FFF" 
	        />
	    </TableRow>
	</TableLayout>
	
    
    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="60dip"
    android:background="@drawable/scan_background"
    android:text="@string/seabtntext"
    android:textColor="#FFFFFF"
    />
	</LinearLayout>
</LinearLayout>