<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/content_background" >

    <include layout="@layout/titlebar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:background="@drawable/tableshape" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dip"
                android:background="@drawable/toprowshape"
                android:gravity="center_vertical"
                android:padding="5dip" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/tb_item04" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:gravity="center_vertical"
                    android:text="@string/help_user"
                    android:layout_marginLeft="10dip"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/help_button_selector"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dip"
                android:layout_marginLeft="1dip"
                android:layout_marginRight="1dip"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:padding="5dip" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/tb_item05" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:gravity="center_vertical"
                    android:text="@string/help_lucky"
                    android:layout_marginLeft="10dip"
                    android:textColor="@color/black"
                    android:textStyle="bold"  />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/help_button_selector" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dip"
                android:background="@drawable/bottomrowshape"
                android:gravity="center_vertical"
                android:padding="5dip" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/tb_item06" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:gravity="center_vertical"
                    android:text="@string/help_other"
                    android:layout_marginLeft="10dip"
                    android:textColor="@color/black"
                    android:textStyle="bold"  />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/help_button_selector" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</LinearLayout>